--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,77 +1,34 @@
 [tool.poetry]
-name = ""
+name = "llm-research"
 version = "0.1.0"
-description = ""
+description = "A minimum Python package built on top of the LangChain framework to interact with LLM."
 authors = ["githubjacky"]
+license = "MIT"
+readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = ">=3.9, <4.0"
-hydra-core = "^1.1.1"
-python-dotenv = "^1.0.0"
-loguru = "<0.7.0"
-orjson = "^3.9.4"
+python = "^3.11"
+python-dotenv = "^1.0.1"
+loguru = "^0.7.2"
+orjson = "^3.9.12"
 tqdm = "^4.66.1"
-pandas = "^2.0.3"
-
-
-[tool.poetry.group.process.dependencies]
-
-
-[tool.poetry.group.model.dependencies]
+langchain = "^0.1.3"
+mlflow = "^2.9.2"
+langchain-google-vertexai = "^0.0.2"
+langchain-openai = "^0.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.25.0"
-ipywidgets = ">=7.6"
+ipykernel = "^6.29.0"
+ipywidgets = "^8.1.1"
+pytest = "^7.4.4"
 jupyterlab-execute-time = "2.3.1"
 jupyterlab = "3.6.6"
 jupyterlab-lsp = "4.3.0"
 python-lsp-server = {extras = ["all"], version = "^1.8.2"}
-jupyter-bokeh = "3.0.2"
-hvplot = "^0.9.1"
-pytest = "^6.2.5"
-pdoc3 = "^0.10.0"
 
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-
-[tool.ruff]
-ignore = ["E501"]
-select = ["B","C","E","F","W","B9", "I", "Q"]
-
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".git-rewrite",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-]
-
-
-# Same as Black.
-line-length = 88
-
-
-[tool.ruff.mccabe]
-max-complexity = 10
