modify the abstraction of prompt in function request_batch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A minimum Python package built on top of the LangChain framework 
 authors = ["githubjacky"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "llm_research"}]
 
 
 [tool.poetry.dependencies]
